deploy/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
  labels:
    name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envars-webhook
  namespace: ${NAMESPACE}
  labels:
    app: envars-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envars-webhook
  template:
    metadata:
      labels:
        app: envars-webhook
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      imagePullSecrets:
        - name: acr-extreme
      containers:
      - name: server
        image: ${IMAGE_NAME}
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
          name: webhook-api
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /run/secrets/tls
          readOnly: true
        - name: webhook-config
          mountPath: /run/config
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: envars-webhook-tls
      - name: webhook-config
        configMap:
          name: webhook-config
---
apiVersion: v1
kind: Service
metadata:
  name: envars-webhook
  namespace: ${NAMESPACE}
spec:
  selector:
    app: envars-webhook
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: envars-webhook
webhooks:
  - name: envars-webhook.${NAMESPACE}.svc
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 30
    clientConfig:
      service:
        name: envars-webhook
        namespace: ${NAMESPACE}
        path: "/mutate"
      caBundle: ${CA_PEM_B64}
    namespaceSelector:
      matchLabels:
        envars-webhook: permit
    rules:
      - operations: [ "CREATE", "UPDATE", "DELETE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods", "pods/binding"]
        scope: '*'
